@@ -40,3 +40,4 @@ Fix: conflict with Advanced Custom Field
 Fix: Social & Skill js bug
 ==1.0.1.8
 some more hooks & filters
+fix bug extend jobs expired date
